# core

./: .gitmodules  CMakeLists.txt
include/chk/core/: arena.h  color.h  log.h  mem.h  print.h  rect.h  types.h
include/chk/core/vec/: fwd.h  v2.h  v3.h  v4.h
src/: arena.c  color.c  log.c  mem.c  print.c  rect.c
src/vec/: v2.c  v3.c  v4.c
